[gui,templates] remove deprecated calls